--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.datasource.password=Mysql_2018!
 mybatis.config-location=classpath:/dao/config.xml
 mybatis.mapper-locations=classpath:/dao/mapper/*.xml
 
+#自定义内容
+base-file-folder=/home/www/files
+
