--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.port=8080
 
 #Datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/course?useUnicode=true&characterEncoding=utf-8
-spring.datasource.url=jdbc:mysql://192.168.152.100:3306/course?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/course?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.url=jdbc:mysql://192.168.152.100:3306/course?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
-#spring.datasource.password=Mysql_2019!
-spring.datasource.password=Mysql_2018!
+spring.datasource.password=Mysql_2019!
+#spring.datasource.password=Mysql_2018!
 
 
 #mybatis
